# AgentPedia

./: .gitignore  AgentPedia_PRD.md  PROJECT_REFACTOR_SUMMARY.md  backend-start.sh  bootstrap.sh  docker-compose.yml  frontend-start.sh  project_rules.md
.github/workflows/: ci.yml  dependency-update.yml  release.yml
backend/: .env.example  PRD_IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  create_mock_agents.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 38aff062c8b4_update_agent_enums_to_match_frontend.py  93554fcd038c_add_wechat_login_support.py  e55da730fb85_add_missing_fields_to_agent_model.py  ext_agent_fields.py
backend/scripts/: init_sample_data.py
backend/src/agentpedia/: __init__.py  main.py
backend/src/agentpedia/api/: deps.py
backend/src/agentpedia/api/v1/: agents.py  agents_prd.py  api.py  api_keys.py  conversations.py  favorites.py  users.py  wechat.py
backend/src/agentpedia/api/v1/search/: __init__.py  endpoints.py
backend/src/agentpedia/core/: config.py  database.py  elasticsearch.py  exceptions.py  logging.py  mongodb.py  redis.py  security.py
backend/src/agentpedia/schemas/: __init__.py  agent.py  agent_prd.py  api_key.py  base.py  common.py  conversation.py  rbac.py  user.py  wechat.py
backend/src/agentpedia/scripts/: requirements.txt  sample_data.py
backend/src/agentpedia/services/: agent_service.py  api_key_service.py  base.py  conversation_service.py  favorite_service.py  mongodb_agent_service.py  rbac_service.py  search_service.py  user_service.py  validation_service.py  wechat_auth_service.py
backend/tests/: test_agents_api.py  test_app_health.py  test_config.py  test_model.py  test_mongodb_integration.py  test_sanity.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/agents/[id]/: page.tsx
frontend/src/app/submit/: page.tsx
frontend/src/components/Layout/: Layout.tsx  Navbar.tsx
frontend/src/components/layout/: footer.tsx  header.tsx
frontend/src/components/providers/: auth-provider-client.tsx  intl-provider.tsx  query-provider.tsx  theme-provider.tsx
frontend/src/components/sections/: featured-agents.tsx  hero.tsx  index.ts  latest-agents.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  badge.tsx  card.tsx  glass-badge.tsx  glass-button.tsx  glass-card.tsx  glass-progress.tsx  index.ts  metric-card.tsx
frontend/src/components/ui/charts/: metric-sparkline.tsx  mini-chart.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AgentDetail.tsx  AgentForm.tsx  Agents.tsx  Chat.tsx  Home.tsx  Login.tsx  Profile.tsx  Register.tsx
frontend/src/services/: agents.ts  api.ts  auth.ts  chat.ts  users.ts
frontend/src/types/: index.ts
scripts/: init-mongo.js  init-postgres.sql
